force-app/main/default/objects/sugati__Hotel__c/sugati__Hotel__c.object-meta.xml
<CustomObject>
    <description>A list of Hotels &amp; Accommodation Options</description>
    <label>Hotel</label>
    <nameField>
        <displayFormat>H-{0000000000}</displayFormat>
        <label>Hotel ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hotels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>