force-app/main/default/objects/sugati__Hotel__c/fields/sugati__H_City__c.field-meta.xml
<CustomField>
    <fullName>sugati__H_City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>