force-app/main/default/objects/sugati__Hotel__c/fields/sugati__H_Country__c.field-meta.xml
<CustomField>
    <fullName>sugati__H_Country__c</fullName>
    <formula>sugati__H_Where_to_go__r.sugati__W_Country__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>