force-app/main/default/objects/sugati__Hotel__c/fields/sugati__H_Email__c.field-meta.xml
<CustomField>
    <fullName>sugati__H_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>