force-app/main/default/objects/sugati__Hotel__c/fields/sugati__H_Hotel_Code__c.field-meta.xml
<CustomField>
    <fullName>sugati__H_Hotel_Code__c</fullName>
    <label>Hotel Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>