force-app/main/default/objects/sugati__Hotel__c/fields/sugati__H_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__H_Name__c</fullName>
    <label>Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>