force-app/main/default/objects/sugati__Hotel__c/fields/sugati__H_Notes__c.field-meta.xml
<CustomField>
    <fullName>sugati__H_Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>