force-app/main/default/objects/sugati__Hotel__c/fields/sugati__H_Phone__c.field-meta.xml
<CustomField>
    <fullName>sugati__H_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>