force-app/main/default/objects/sugati__Hotel__c/fields/sugati__H_Short_Forms__c.field-meta.xml
<CustomField>
    <fullName>sugati__H_Short_Forms__c</fullName>
    <label>Short Forms</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>