force-app/main/default/objects/sugati__Hotel__c/fields/sugati__H_State_County__c.field-meta.xml
<CustomField>
    <fullName>sugati__H_State_County__c</fullName>
    <label>State / County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>