force-app/main/default/objects/sugati__Hotel__c/fields/sugati__H_Website__c.field-meta.xml
<CustomField>
    <fullName>sugati__H_Website__c</fullName>
    <label>Website</label>
    <type>Url</type>
</CustomField>