force-app/main/default/objects/sugati__Hotel__c/fields/sugati__H_Where_to_go__c.field-meta.xml
<CustomField>
    <fullName>sugati__H_Where_to_go__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Where to go</label>
    <referenceTo>sugati__Where_to_go__c</referenceTo>
    <relationshipLabel>Hotels</relationshipLabel>
    <relationshipName>Hotels</relationshipName>
    <type>Lookup</type>
</CustomField>